--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "mourasel": "file:",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
